# productui

./: .gitignore  Cargo.toml  config.toml.example  flake.nix  readme.md
docs/: configuration.md
src/: config.rs  main.rs
src/clients/: github.rs
src/widgets/: calendar.rs  jira.rs  pull_requests.rs  todo.rs
